# dyloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.dev.sh  build.sh
CMakeExt/: CompilerFlags.cmake  DART.cmake  InstallHelpers.cmake  MPI.cmake  hwloc.cmake
build.mic/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build.mic/common/: Makefile  cmake_install.cmake
build.mic/dyloc/: Makefile  cmake_install.cmake
build.mic/dylocxx/: Makefile  cmake_install.cmake
build.mic/dylocxx/test/: Makefile  cmake_install.cmake
common/: CMakeLists.txt
common/include/dyloc/: common.h
common/include/dyloc/common/: config.h  host_topology.h  types.h
common/include/dyloc/common/internal/: hwloc.h  macro.h  papi.h
common/src/internal/: papi.c
config/: default.cmake  supermic.cmake  supermuc.cmake
dyloc/: CMakeLists.txt  README.md  dyloc-config.cmake.in
dyloc/include/: dyloc.h
dyloc/include/dyloc/: host_topology.h  init.h  topology.h
dyloc/src/: init.cc  topology.c
dylocxx/: CMakeLists.txt  README.md  dylocxx-config.cmake.in
dylocxx/include/: dylocxx.h
dylocxx/include/dylocxx/: ;  domain.h  domain_graph.h  exception.h  host_topology.h  hwinfo.h  init.h  locality_domain.h  runtime.h  topology.h  topology_graph.h  topology_view.h  types.h  unit_locality.h  unit_mapping.h  utility.h
dylocxx/include/dylocxx/adapter/: dart.h  hwloc.h
dylocxx/include/dylocxx/impl/: topology.impl.h
dylocxx/include/dylocxx/internal/: .swp  algorithm.h  assert.h  cstring.h  domain_tag.h  iterator.h  logging.h
dylocxx/other tests temp excluded/: domain_group_test.h  topology_test.cc
dylocxx/src/: domain.cc  domain_graph.cc  host_topology.cc  hwinfo.cc  init.cc  locality_domain.cc  runtime.cc  topology.cc  unit_locality.cc  unit_mapping.cc
dylocxx/src/adapter/: dart.cc
dylocxx/src/internal/: logging.cc
dylocxx/test/: CMakeLists.txt  domain_filter_test.cc  domain_filter_test.h  domain_group_test.cc  init_test.cc  init_test.h  main.cc  test_base.h  test_globals.h  topology_test.cc  topology_test.h
tools/lslodo/examples/: locdomains.projekt03.json
